--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.22",
+    "vue-router": "^3.0.1",
     "vuetify": "^1.3.0"
   },
   "devDependencies": {
